--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "cryptopals-rs"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+overflow-checks = false
+
 [dependencies]
 itertools = "0.10"
 openssl = "0.10"
