--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "cryptopals-rs"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = ["web_timing"]
+
 [profile.dev]
 overflow-checks = false
 
