--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ overflow-checks = false
 itertools = "0.10"
 openssl = "0.10"
 rand = "0.8"
+num = "0.4"
 num-bigint = { version = "0.4", features = ["rand"] }
 once_cell = "1.12"
